--- a/src/app/assigments/add-assignment/add-assignment.component.html
+++ b/src/app/assigments/add-assignment/add-assignment.component.html
@@ -1,82 +1,129 @@
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup" (ngSubmit)="FirstSubmit()">
-      <ng-template matStepLabel>Assignment et date de rendu</ng-template>
-      <mat-form-field>
-        <mat-label>Nom</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field><br/><br/>
-      <mat-form-field>
-        <mat-label>Date : </mat-label>
-        <input matInput #dateAssignement
-               name="Date"
-               [matDatepicker]="picker"
-               placeholder="Date"
-               [(ngModel)]="dateDevoir" [ngModelOptions]="{standalone: true}"/>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperNext>Suivant</button>
-      </div>
-    </form>
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="firstFormGroup" (ngSubmit)="FirstSubmit()">
+          <ng-template matStepLabel>Assignment et date de rendu</ng-template>
+          <div class="row">
+            <div class="col-md-12">
+              <mat-form-field>
+                <mat-label>Nom</mat-label>
+                <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+              </mat-form-field><br/><br/>
+            </div>
+            <div class="col-md-12">
+              <mat-form-field>
+                <mat-label>Date : </mat-label>
+                <input matInput #dateAssignement
+                      name="Date"
+                      [matDatepicker]="picker"
+                      placeholder="Date"
+                      [(ngModel)]="dateDevoir" [ngModelOptions]="{standalone: true}"/>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+            <div>
+              <button mat-flat-button color="accent" matStepperNext>Suivant</button>
+            </div>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup" (ngSubmit)="SecondSubmit()">
-      <ng-template matStepLabel>Matière et Elève</ng-template>
-      <mat-form-field>
-        <mat-label>Matière</mat-label>
-        <mat-select [(ngModel)]="matiereItem" [ngModelOptions]="{standalone: true}">
-          <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">
-            {{matiere.nomMatiere}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field><br/><br/>
-      <mat-form-field>
-        <mat-label>Elève</mat-label>
-        <mat-select [(ngModel)]="eleveItem" [ngModelOptions]="{standalone: true}">
-          <mat-option *ngFor="let eleve of eleves" [value]="eleve._id">
-            {{eleve.nom}} {{eleve.prenom}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Précedent</button>
-        <button mat-button matStepperNext>Suivant</button>
+    <mat-card style="justify-content: right;">
+      <div class="col-md-6">
+        <mat-card-content>
+          <form [formGroup]="secondFormGroup" (ngSubmit)="SecondSubmit()">
+            <ng-template matStepLabel>Matière et Elève</ng-template>
+            <div class="row">
+              <div class="col-md-12">
+                <mat-form-field>
+                  <mat-label>Matière</mat-label>
+                  <mat-select [(ngModel)]="matiereItem" [ngModelOptions]="{standalone: true}" (selectionChange)="onMatiereChange()">
+                    <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">
+                      {{matiere.nomMatiere}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field><br/><br/>
+              </div>
+              <div class="col-md-12">
+                <mat-form-field>
+                  <mat-label>Elève</mat-label>
+                  <mat-select [(ngModel)]="eleveItem" [ngModelOptions]="{standalone: true}" (selectionChange)="onEleveChange()">
+                    <mat-option *ngFor="let eleve of eleves" [value]="eleve._id">
+                      {{eleve.prenom}} {{eleve.nom}}
+                    </mat-option>
+                  </mat-select>
+              </mat-form-field>
+              </div>
+              <div>
+                <button mat-flat-button color="primary" matStepperPrevious>Précedent</button>
+                <button mat-flat-button color="accent" matStepperNext>Suivant</button>
+              </div>
+            </div>
+          </form>
+        </mat-card-content><br/><br/>
+        <div *ngIf="currentEleve !== null">
+          <hr/>
+          <app-view-eleve
+              [eleve]="currentEleve"></app-view-eleve>
+        </div>
       </div>
-    </form>
+      <div class="col-md-6">
+        <div class="row-card" *ngIf="currentMatiere !== null" style="background: #F7F7F7;">
+          <div style="width: 100%;">
+            <app-view-matiere
+              [matiere]="currentMatiere"></app-view-matiere>
+          </div>
+        </div>
+      </div>
+    </mat-card>
   </mat-step>
   <mat-step [stepControl]="ThirdFormGroup">
-    <form [formGroup]="ThirdFormGroup" (ngSubmit)="ThirdSubmit()">
-      <ng-template matStepLabel>Note et remarque</ng-template>
-      <mat-form-field>
-        <mat-label>Note</mat-label>
-        <input matInput placeholder="10" formControlName="noteCtrl" required>
-      </mat-form-field><br/><br/>
-      <mat-label>Remarque</mat-label>
-        <ngx-editor-menu [editor]="remarqueeditor"> </ngx-editor-menu>
-          <ngx-editor
-            [editor]="remarqueeditor"
-            placeholder="Type here..."
-            formControlName="remarqueItem"
-          ></ngx-editor>
-      <div>
-        <button mat-button matStepperPrevious>Précedent</button>
-        <button mat-button matStepperNext>Suivant</button>
-      </div>
-    </form>
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="ThirdFormGroup" (ngSubmit)="ThirdSubmit()">
+          <ng-template matStepLabel>Note et remarque</ng-template>
+          <mat-form-field>
+            <mat-label>Note</mat-label>
+            <input matInput placeholder="10" formControlName="noteCtrl" required>
+          </mat-form-field><br/><br/>
+          <mat-label>Remarque</mat-label>
+            <ngx-editor-menu [editor]="remarqueeditor"> </ngx-editor-menu>
+              <ngx-editor
+                [editor]="remarqueeditor"
+                placeholder="Type here..."
+                formControlName="remarqueItem"
+              ></ngx-editor>
+          <div>
+            <button mat-flat-button color="primary" matStepperPrevious>Précedent</button>
+            <button mat-flat-button color="accent" matStepperNext>Suivant</button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Done</ng-template>
-    <p>Vous avez terminer</p>
-    <div>
-      <button mat-button matStepperPrevious>Précedent</button>
-      <button mat-button (click)="stepper.reset()">Reset</button>
-      <button mat-stroked-button
-          (click)="submit();stepper.reset()"
-          color="primary">
-    Sauver
-  </button>
-    </div>
+    <mat-card>
+      <div class="row">
+        <mat-card-title>Vous avez terminer !</mat-card-title>
+        <div class="col-md-12">
+          <mat-card-actions style="justify-content: center;">
+            <div>
+              <button mat-flat-button color="primary" matStepperPrevious>Précedent</button>
+              <button mat-button mat-stroked-button color="warn" (click)="stepper.reset()">Reset</button>
+              <button mat-flat-button
+                  (click)="submit();stepper.reset()"
+                  color="accent">
+                Sauver
+              </button>
+            </div>
+          </mat-card-actions>
+        </div>
+      </div>
+    </mat-card>
 </mat-step>
 </mat-horizontal-stepper>
