--- a/src/app/assigments/add-assignment/add-assignment.component.scss
+++ b/src/app/assigments/add-assignment/add-assignment.component.scss
@@ -3,3 +3,28 @@
   flex-direction: column;
   margin:5px;
 }
+.mat-card{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.mat-card-title{
+  display: flex;
+  justify-content: center;
+}
+
+.row-card{
+  width: 100%;
+}
+
+mat-form-field{
+  width: 100%;
+}
+
+mat-select{
+  width: 100%;
+}
+
+hr{
+  width: 50%;
+}
