--- a/src/app/assigments/edit-assignment/edit-assignment.component.scss
+++ b/src/app/assigments/edit-assignment/edit-assignment.component.scss
@@ -3,3 +3,21 @@
   flex-direction: column;
   margin:5px;
 }
+h1{
+  display: block;
+  padding: 20px;
+  background: dodgerblue;
+  color:white;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+}
+
+.col{
+  margin: 0;
+}
+
+.row{
+  margin: unset !important;
+}
