--- a/src/app/Matieres/single-matiere-component/single-matiere-component.component.html
+++ b/src/app/Matieres/single-matiere-component/single-matiere-component.component.html
@@ -6,12 +6,18 @@
         </mat-icon>
       </div>
       <div class="toolbox">
-        <div class="square-button" (click)="onDelete.emit(matiere._id)" style="background: red;">
+        <div
+          *ngIf="this.authService.isAdmin()"
+          class="square-button"
+          (click)="onDelete.emit(matiere._id)" style="background: red;">
           <mat-icon>
             delete
           </mat-icon>
         </div>
-        <div class="square-button" (click)="onEdit.emit(matiere._id)" style="background: forestgreen">
+        <div
+          class="square-button"
+          *ngIf="this.authService.isAdmin()"
+          (click)="onEdit.emit(matiere._id)" style="background: forestgreen">
           <mat-icon>
             mode_edit
           </mat-icon>
