--- a/src/app/assigments/assigments.component.html
+++ b/src/app/assigments/assigments.component.html
@@ -17,7 +17,8 @@
           <app-single-assignment
             [cdkDragData]="assignment"
             cdkDrag
-            (rendre)="rendre(assignment)" [assignment]="assignment"></app-single-assignment>
+            (rendre)="rendre(assignment)"
+            [assignment]="assignment"></app-single-assignment>
         </ng-container>
       </cdk-virtual-scroll-viewport>
     </div>
