push pagination matiere

--- a/src/app/Matieres/liste-matiere/liste-matiere.component.scss
+++ b/src/app/Matieres/liste-matiere/liste-matiere.component.scss
@@ -46,3 +46,8 @@ mat-form-field{
   border: 2px solid red;
   border-radius: 4px;
 }
+
+.paginator-container{
+  display: flex;
+  justify-content: right;
+}
