--- a/src/app/Matieres/liste-matiere/liste-matiere.component.html
+++ b/src/app/Matieres/liste-matiere/liste-matiere.component.html
@@ -97,6 +97,13 @@
             (onEdit)="edit($event)"
             (onDelete)="delete($event)" [matiere]="item"></app-single-matiere-component>
         </div>
+      <div class="paginator-container">
+        <mat-paginator
+          (page)="updatePage($event)"
+          [length]="totalDocs"
+          [pageSize]="10">
+        </mat-paginator>
+      </div>
     </div>
   </mat-card>
 </div>
