--- a/src/app/Eleves/liste-eleves/liste-eleves.component.html
+++ b/src/app/Eleves/liste-eleves/liste-eleves.component.html
@@ -55,6 +55,7 @@
               <div class="toolbox" *ngIf="authService.isAdmin()">
                 <mat-icon (click)="delete(eleve._id)">delete</mat-icon>
                 <mat-icon (click)="edit(eleve)">mode_edit</mat-icon>
+                <mat-icon (click)="more(eleve)">apps</mat-icon>
               </div>
             </td>
           </tr>
