--- a/src/app/Eleves/liste-eleves/liste-eleves.component.html
+++ b/src/app/Eleves/liste-eleves/liste-eleves.component.html
@@ -52,9 +52,10 @@
               {{getDate(eleve.dateCreated) | date}}
             </td>
             <td>
-              <div class="toolbox">
+              <div class="toolbox" *ngIf="authService.isAdmin()">
                 <mat-icon (click)="delete(eleve._id)">delete</mat-icon>
                 <mat-icon (click)="edit(eleve)">mode_edit</mat-icon>
+                <mat-icon (click)="more(eleve)">apps</mat-icon>
               </div>
             </td>
           </tr>
