--- a/src/app/assigments/assigments.component.html
+++ b/src/app/assigments/assigments.component.html
@@ -1,8 +1,9 @@
 <main style="width:100%;">
   <div class="ajouterBtn">
     <a routerLink="/main/add">
-      <button mat-flat-button color="accent" >Ajouter Assignment</button>
+      <button style="width: 100%" mat-flat-button color="accent" >Ajouter Assignment</button>
     </a>
+    <button mat-flat-button color="primary" (click)="peuplerLaBase()">Peupler</button>
   </div>
   <div class="row">
     <div class="col-md-6"
