--- a/src/app/Matieres/liste-matiere/liste-matiere.component.scss
+++ b/src/app/Matieres/liste-matiere/liste-matiere.component.scss
@@ -49,5 +49,6 @@ mat-form-field{
 
 .paginator-container{
   display: flex;
-  justify-content: right;
+  justify-content: center;
+  align-items: center;
 }
