--- a/src/app/assigments/edit-assignment/edit-assignment.component.html
+++ b/src/app/assigments/edit-assignment/edit-assignment.component.html
@@ -43,6 +43,7 @@
         <mat-label>Note</mat-label>
         <input
           name="note"
+          type="number"
           formnovalidate
           [formControl]="formulaire.controls['note']"
           matInput
